# Tennis_Repo

./: .gitignore  Print.py  README.md  log.txt  logfile.txt
Assignments/: northwind_FarhanehNazemi.sql  supplementary-project_FarhanehNazemi.ipynb  supplementary-project__FarhanehNazemi.ipynb
DataAnalysis/: penguin.ipynb
K-means/: README.md  k-means.py  point_test.txt
Statistic/: StatisticProject.ipynb
Tennis_Repo/: Makefile  README.md  pyproject.toml
Tennis_Repo/docs/: mkdocs.yml
Tennis_Repo/docs/docs/: Tennis match analysis (2).pptx:Zone.Identifier  Tennis match analysis.pdf:Zone.Identifier  Tennis match analysis.pptx  index.md
Tennis_Repo/notebooks/: 1.extract_zipfiles.ipynb  2.concat_parquetfiles.ipynb  3.main_question.ipynb  4.new_question.ipynb
k-means/: Farhaneh_Nazemi_k-means.py  k-means.py  points_test.txt
logs/: info.txt
